<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/iconnobg" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galata"
            android:layout_gravity="center_horizontal"
            android:shadowRadius="5"
            android:shadowDy="10"
            android:shadowDx="10"
            android:layout_margin="10dp"
            android:fontFamily="cursive"
            android:shadowColor="@color/black"
            android:textSize="35sp"
            android:textColor="#0077ED"/>

        <TextView
            android:id="@+id/textContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:textSize="20sp"
            android:autoLink="all"
            android:text="@string/hello_world"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_margin="10dp"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            android:layout_gravity="center_horizontal"
            ads:adUnitId="@string/banner_ad_unit_id"/>

    </LinearLayout>

</ScrollView>